--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,13 +1,3 @@
-name: CI/CD Pipeline
-
-on:
-  push:
-    branches:
-      - main
-  pull_request:
-    branches:
-      - main
-
 jobs:
   build-and-test:
     runs-on: ubuntu-latest
@@ -22,28 +12,27 @@ jobs:
           node-version: '14'
 
       - name: Install dependencies
-        run: npm install
+        run: |
+          set -x  # Enables debugging
+          npm install
 
       - name: Run tests
-        run: npm test
+        run: |
+          set -x
+          npm test
 
       - name: Lint code
-        run: npm run lint
+        run: |
+          set -x
+          npm run lint
 
       - name: Build Docker image
-        run: docker build -t my-app:${{ github.sha }} .
+        run: |
+          set -x
+          docker build -t my-app:${{ github.sha }} .
 
       - name: Save Docker image as artifact
         uses: actions/upload-artifact@v3
         with:
           name: my-app-image
           path: .
-
-  deploy:
-    needs: build-and-test
-    runs-on: ubuntu-latest
-    if: github.ref == 'refs/heads/main'
-
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
