--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,3 +1,14 @@
+name: CI/CD Pipeline
+
+on:
+  push:
+    branches:
+      - main
+  pull_request:
+    branches:
+      - main  
+  
+  
 jobs:
   build-and-test:
     runs-on: ubuntu-latest
