--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,49 +1,46 @@
-name: CI/CD Pipeline
+name: Commit Log and Tagging Author
 
 on:
   push:
     branches:
-      - main
-  pull_request:
-    branches:
-      - main  
-  
-  
+      - main  # Trigger on push to the 'rutick' branch.
+
 jobs:
-  build-and-test:
+  generate-log-and-tag-author:
+    name: Generate Commit Log and Tag Author
     runs-on: ubuntu-latest
-    
+
     steps:
       - name: Checkout code
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
 
-      - name: Set up Node.js
-        uses: actions/setup-node@v3
+      - name: Generate Commit Description and Log
+        run: |
+          echo "Generating commit description and log..."
+          COMMIT_MESSAGE=$(git log -1 --pretty=format:%s)
+          AUTHOR_NAME=$(git log -1 --pretty=format:'%an')  # Get the author of the commit.
+          AUTHOR_GITHUB=$(git log -1 --pretty=format:'%ae')  # Get the author's GitHub email.
+
+          echo "Commit Message: $COMMIT_MESSAGE"
+          echo "Commit by: $AUTHOR_NAME <$AUTHOR_GITHUB>" > commit-log.txt
+          echo "Commit Description: $COMMIT_MESSAGE" >> commit-log.txt
+          cat commit-log.txt
+
+      - name: Upload Commit Log as Artifact
+        uses: actions/upload-artifact@v4
         with:
-          node-version: '14'
+          name: commit-log
+          path: commit-log.txt
 
-      - name: Install dependencies
+      - name: Create GitHub Discussion
         run: |
-          set -x  # Enables debugging
-          npm install
-
-      - name: Run tests
-        run: |
-          set -x
-          npm test
-
-      - name: Lint code
-        run: |
-          set -x
-          npm run lint
-
-      - name: Build Docker image
-        run: |
-          set -x
-          docker build -t my-app:${{ github.sha }} .
-
-      - name: Save Docker image as artifact
-        uses: actions/upload-artifact@v3
-        with:
-          name: my-app-image
-          path: .
+          echo "Creating a discussion in the General category..."
+          curl -X POST \
+            -H "Authorization: token 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" \
+            -H "Content-Type: application/json" \
+            -d '{
+                  "title": "Commit Log: '$COMMIT_MESSAGE'",
+                  "body": "This commit was made by @'$AUTHOR_NAME'.\n\n**Commit Message:**\n'$COMMIT_MESSAGE'\n\n**Commit Log:**\n'$COMMIT_MESSAGE'\n\n**Author:** @'$AUTHOR_NAME'.",
+                  "category": "general"
+                }' \
+            https://api.github.com/repos/jay86050/mygit_action/discussions
